--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
-        exclude 'META-INF/rxjava.properties'
     }
 
     compileSdkVersion 25
@@ -35,6 +34,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
+    //multidex
+    compile 'com.android.support:multidex:1.0.1'
+
     //Gson
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
@@ -46,4 +48,8 @@ dependencies {
 
     //fonts
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
+    //butterknife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
