--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
+        exclude 'META-INF/rxjava.properties'
     }
 
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.official.news"
+        applicationId "com.official.noowenz"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -47,10 +48,22 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
+    //Dagger
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.2'
+    compile 'com.google.dagger:dagger:2.2'
+    provided 'javax.annotation:jsr250-api:1.0'
+
+    //RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.0.7'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+
     //fonts
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
     //butterknife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
 }
