--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.official.news">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.official.noowenz">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.official.news.utils.MyApplication"
+        android:name="com.official.noowenz.utils.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.HomeActivity"
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
+
+        <activity android:name="com.official.noowenz.home.view.HomeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -21,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
