--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,13 @@ android {
             initWith(buildTypes.debug)
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"http://www.mocky.io/v2\"")
         }
         live {
             initWith(buildTypes.debug)
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"http://www.mocky.io/v2\"")
         }
         release {
             signingConfig signingConfigs.release
