--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,44 +59,45 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:${rootProject.supportLibraryVersion}"
-    compile "com.android.support:recyclerview-v7:${rootProject.supportLibraryVersion}"
-    compile "com.android.support:design:${rootProject.supportLibraryVersion}"
-    compile "com.android.support.constraint:constraint-layout:${rootProject.constraintLayoutVersion}"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:recyclerview-v7:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:design:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support.constraint:constraint-layout:${rootProject.constraintLayoutVersion}"
     testCompile "junit:junit:${rootProject.junitVersion}"
 
     //multidex
-    compile "com.android.support:multidex:${rootProject.supportMultidexVersion}"
+    implementation "com.android.support:multidex:${rootProject.supportMultidexVersion}"
 
     //Gson
-    compile "com.google.code.gson:gson:${rootProject.gsonVersion}"
+    implementation "com.google.code.gson:gson:${rootProject.gsonVersion}"
 
     //Retrofit
-    compile "com.squareup.retrofit2:converter-gson:${rootProject.retrofit2Version}"
-    compile "com.squareup.retrofit2:retrofit:${rootProject.retrofit2Version}"
-    compile "com.squareup.retrofit2:converter-scalars:${rootProject.retrofit2Version}"
-    compile "com.squareup.okhttp3:logging-interceptor:${rootProject.okhttp3Version}"
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit2Version}"
+    implementation "com.squareup.retrofit2:retrofit:${rootProject.retrofit2Version}"
+    implementation "com.squareup.retrofit2:converter-scalars:${rootProject.retrofit2Version}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.okhttp3Version}"
 
     //RxJava
-    compile "io.reactivex.rxjava2:rxjava:${rootProject.rxjava2RxjavaVersion}"
-    compile "io.reactivex.rxjava2:rxandroid:${rootProject.rxjava2rxandroidVersion}"
-    compile "com.squareup.retrofit2:adapter-rxjava:${rootProject.rxjava2adapterVersion}"
-    compile "com.jakewharton.rxbinding2:rxbinding:${rootProject.rxjava2rxbindingVersion}"
+    implementation "io.reactivex.rxjava2:rxjava:${rootProject.rxjava2RxjavaVersion}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rootProject.rxjava2rxandroidVersion}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${rootProject.rxjava2adapterVersion}"
+    implementation "com.jakewharton.rxbinding2:rxbinding:${rootProject.rxjava2rxbindingVersion}"
 
     //Dagger 2
-    compile "com.google.dagger:dagger:${rootProject.daggerVersion}"
+    implementation "com.google.dagger:dagger:${rootProject.daggerVersion}"
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.daggerVersion}"
-    compile "com.google.dagger:dagger-android-support:${rootProject.daggerVersion}"
+    implementation "com.google.dagger:dagger-android-support:${rootProject.daggerVersion}"
     annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
 
+
     //Viewmodel
-    compile "android.arch.lifecycle:runtime:$rootProject.lifecycle"
+    implementation "android.arch.lifecycle:runtime:$rootProject.lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.lifecycle"
-    compile "android.arch.lifecycle:extensions:$rootProject.lifecycle"
+    implementation "android.arch.lifecycle:extensions:$rootProject.lifecycle"
     implementation "android.arch.lifecycle:reactivestreams:$rootProject.lifecycle"
 
     //Butterknife
-    compile "com.jakewharton:butterknife:${rootProject.butterknifeVersion}"
+    implementation "com.jakewharton:butterknife:${rootProject.butterknifeVersion}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${rootProject.butterknifeVersion}"
 }
