--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,14 @@ ext {
     minSdkVersion = 16
     targetSdkVersion = 26
     compileSdkVersion = 26
-    buildToolsVersion = '26.0.2'
+    buildToolsVersion = '27.0.3'
 
     // dependencies versions
     supportLibraryVersion = '27.0.2'
     constraintLayoutVersion = '1.0.2'
     playServicesVersion = '11.0.4'
     junitVersion = '4.12'
-    supportMultidexVersion = '1.0.1'
+    supportMultidexVersion = '1.0.2'
     gsonVersion = '2.6.2'
     retrofit2Version = '2.0.2'
     okhttp3Version = '3.3.1'
@@ -50,5 +50,5 @@ ext {
     glideVersion = '3.7.0'
     materialDialogsVersion = '0.9.0.1'
     butterknifeVersion = '8.8.1'
-    lifecycle = '1.0.0-beta2'
+    lifecycle = '1.1.0'
 }
